force-app/main/default/objects/Chat_Notifications__c/Chat_Notifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the settings for the LiveAgent chat notifications.</description>
    <label>Chat Notifications</label>
</CustomObject>