force-app/main/default/objects/Chat_Notifications__c/fields/Chat_Request_Sound_Active__c.field-meta.xml
<CustomField>
    <fullName>Chat_Request_Sound_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chat Request Sound Active</label>
    <type>Checkbox</type>
</CustomField>