force-app/main/default/objects/Chat_Notifications__c/listViews/All_Notifications_Settings.listView-meta.xml
<ListView>
    <fullName>All_Notifications_Settings</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Chat_Request_Active__c</columns>
    <columns>Chat_Request_Message__c</columns>
    <columns>Chat_Request_Sound_Active__c</columns>
    <columns>Chat_Message_Notification_Active__c</columns>
    <columns>Chat_Message_Sound_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Notifications Settings</label>
</ListView>